# voice-doc-appointment

./: README.md  __init__.py  pyproject.toml  setup.py
src/voice_doctor_appointment/app/: app.py  config.py
src/voice_doctor_appointment/app/models/: __init__.py  doctor.py  location.py
src/voice_doctor_appointment/app/services/: __init__.py  doctor_service.py  voice_service.py
src/voice_doctor_appointment/app/ui/: __init__.py  doctor_card.py  main_content.py  sidebar.py
